M       upfirdn2dMex.mexw32
M       AmapMex.mexw32
M       cg_noise_estimation.m

(1) Marko Wilke has recompiled the c-code for windows 32bit, which will
    hopefully solve the problems with the mexw32 files.
(2) Updated cg_noise_estimation.m to save memory.
------------------------------------------------------------------------
r340 | gaser | 2010-05-31 21:03:58

M       cg_vbm8_write.m

cg_vbm8_write.m now prints the correct revision number of VBM8.
------------------------------------------------------------------------
r341 | gaser | 2010-06-03 12:34:57

M       kmeans3D.m
M       cg_vbm8_write.m

(1) Replaced kmeans3D.m by code from spm_kmeans1.m.
(2) Get correct revision number in cg_vbm8_write.m.
------------------------------------------------------------------------
r342 | gaser | 2010-06-22 22:57:19

M      cg_spmT2x.m

Voxel values were always thresholded at uncorrected p-values in cg_spmT2x.m.
------------------------------------------------------------------------
r343 | gaser | 2010-06-25 09:12:42

M      cg_spm8_batch.m
M      cg_vbm8_batch.m

Modified call to spm defaults in cg_*_batch.m. 
------------------------------------------------------------------------
r344 | gaser | 2010-07-26 08:39:17

M       tbx_cfg_vbm8.m

Corrected a typo in tbx_cfg_vbm8.m.
------------------------------------------------------------------------
r345 | gaser | 2010-07-28 18:54:58

M       Contents_info.txt
M       Makefile.vbm
M       cg_vbm8_write.m
M       cg_ornlm.m

Added old noise estimation based on local statistics as alternative if
robust noise estimation will fail due to memory issues.
------------------------------------------------------------------------
r346 | gaser | 2010-08-02 22:41:07

A      cg_create_MPM.m
A      Anatomy2Dartel.txt

Added cg_create_MPM.m and Anatomy2Dartel.txt for creating Dartel atlas of
Anatomy Toolbox.
------------------------------------------------------------------------
r347 | gaser | 2010-08-03 10:21:54