@@ -10,7 +10,7 @@ TARGET2=/Volumes/UltraMax/spm8/toolbox/vbm8
 
 STARGET=dbm.neuro.uni-jena.de:/Applications/xampp/htdocs/vbm8
 
-MATLAB_FILES=Contents.m cg_vbm8_defaults.m cg_vbm8_run.m cg_vbm8_write.m cg_check_cov.m cg_showslice_all.m cg_spmT2x.m cg_spmF2x.m cg_vbm8_tools.m cg_vbm8_debug.m cg_morph_vol.m cg_vbm8_batch.* tbx_cfg_vbm8.m spm_vbm8.m vbm8.man cg_vbm8_bias* cg_spm8_batch.* cg_vbm8_defs.m cg_vbm8_longitudinal.m cg_vbm8_update.m cg_ornlm.m cg_vbm8_get_defaults.m cg_slice_overlay.m cg_slice_overlay_ui.m spm_max_nS.m slice_overlay.m cg_noise_estimation.m cg_noise_estimation_local.m cg_cleanup_gwc.m kmeans3D.m farras.m dwt3D.m afb3D.m cshift3D.m
+MATLAB_FILES=Contents.m cg_vbm8_defaults.m cg_vbm8_run.m cg_vbm8_write.m cg_check_cov.m cg_showslice_all.m cg_spmT2x.m cg_spmF2x.m cg_vbm8_tools.m cg_vbm8_debug.m cg_morph_vol.m cg_vbm8_batch.* tbx_cfg_vbm8.m spm_vbm8.m vbm8.man cg_vbm8_bias* cg_spm8_batch.* cg_vbm8_defs.m cg_vbm8_longitudinal.m cg_vbm8_update.m cg_ornlm.m cg_vbm8_get_defaults.m cg_slice_overlay.m cg_slice_overlay_ui.m spm_max_nS.m slice_overlay.m cg_noise_estimation.m cg_cleanup_gwc.m kmeans3D.m farras.m dwt3D.m afb3D.m cshift3D.m
 EBTKS_FILES=EBTKS w32 maci maci64 a64 glx
 C_FILES=Amap.[ch] AmapMex.* ornlmMex.* upfirdn2dMex.* MrfPrior.c Pve.c Kmeans.c vollib.c ornlm.c
 #MISC_FILES=Template_?_IXI550_MNI152.nii submask.nii
